--- a/XamarinContacts/XamarinContacts/Pages/MainPage.xaml
+++ b/XamarinContacts/XamarinContacts/Pages/MainPage.xaml
@@ -4,10 +4,12 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
+             Title="Контакты"
              x:Class="XamarinContacts.MainPage">
 
     <StackLayout>
         <Label Text="Контакты" />
+        
 
     </StackLayout>
 
